testsuite/tests/properties/invalid_bind/test.out
== bad_arity.lkt ==
common.lkt:18:9: error: extra arguments for Bind's conv_prop must be optional
18 |         %eq(node.type_var, node.ref_var, conv_prop=BazNode.conv_prop)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== bad_return_type.lkt ==
common.lkt:18:9: error: Bind's conv_prop must return a subtype of FooNode.entity
18 |         %eq(node.type_var, node.ref_var, conv_prop=BazNode.conv_prop)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== unbound_dynvar.lkt ==
common.lkt:18:9: error: In call to BazNode.conv_prop as Bind's conv_prop, some dynamic variables need to be bound: dyn_node2
18 |         %eq(node.type_var, node.ref_var, conv_prop=BazNode.conv_prop)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== valid.lkt ==
Code generation was successful

== valid_default_arg.lkt ==
Code generation was successful

lkt_compile: Done
